# WindGym

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.sh  setup.py
DTUWindGym/: __init__.py
DTUWindGym/envs/: __init__.py  grid_world.py
DTUWindGym/envs/BladeErosion/: BladeErosionEnv.py  DDQN.py  README.md  run_DDQN.py
DTUWindGym/envs/WindFarmEnv/: AgentEval.py  AgentEvalFast.py  EnvEval.py  FarmEval.py  MesClass.py  PyWakeAgent.py  README.md  WindEnv.py  WindEnvMulti.py  Wind_Farm_Env.py  __init__.py
DTUWindGym/envs/WindFarmEnv/Agents/: BaseAgent.py  FlorisAgent.py  GreedyAgent.py  PyWakeAgent.py  RandomAgent.py  __init__.py
DTUWindGym/envs/WindFarmEnv/BasicControllers/: BasicControllers.py  __init__.py
DTUWindGym/envs/WindFarmEnv/Examples/: Example 1 Make environment.ipynb  Example 2 Evaluate pretrained agent.ipynb
DTUWindGym/envs/WindFarmEnv/Examples/EnvConfigs/: 2turb.yaml  4turb.yaml  Env1.yaml
WindGym/: AgentEval.py  FarmEval.py  MesClass.py  WindEnvMulti.py  Wind_Farm_Env.py  version.py
WindGym/Agents/: ConstantAgent.py  GreedyAgent.py  PyWakeAgent.py  __init__.py
WindGym/Examples/: Example 1 Make environment.ipynb  Example 2 Evaluate pretrained agent.ipynb  Example 3 load results from pre evaluated model.ipynb
WindGym/wrappers/: __init__.py  recordEpisodeVals.py
examples/: Example 1 Make environment.ipynb  Example 2 Evaluate pretrained agent.ipynb  Example 3 load results from pre evaluated model.ipynb  curriculum.py  curriculum_learning.py  longer_steps_example.py  submit.sh
examples/HawcFiles/htc/: python_yaw_control.htc
tests/: test_MesClass.py  test_basics.py  test_pywake_agent.py
