[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["DTUWindGym"]

[project]
name = "DTUWindGym"
version = "0.0.1"
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "hipersim==0.1.6",
  "dynamiks[test] @ git+https://gitlab.windenergy.dtu.dk/DYNAMIKS/dynamiks.git@05a10bd4262f158cbbb02da5cca0f445d95718b9",
  "h2lib[test]",
  "floris==4.2.1",
  "topfarm",
  "h2lib",
  "pettingzoo",
  "wetb",
  "pre-commit",
]
