[project]
name = "WindGym"
version = "0.0.1"
requires-python = ">=3.7, <3.11"
dependencies = [
  "gymnasium",
  "stable_baselines3",
  #"pygame>=2.1.3",
  "hipersim==0.1.6",
  "dynamiks @ git+https://gitlab.windenergy.dtu.dk/DYNAMIKS/dynamiks.git@05a10bd4262f158cbbb02da5cca0f445d95718b9",
  "floris==4.2.1",
  "topfarm",
  "pettingzoo",
  "wetb",
  #"h2lib[test]",
  #"h2lib",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--cov-report term-missing:skip-covered --cov=WindGym"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
WindGym = { path = ".", editable = true }

[tool.pixi.dependencies]
hdf5 = "*"
h5py = "*"
netcdf4 = "*"
numpy = "<2"
pre-commit = ">=4.0.1,<5"
pytest = ">=8.3.4,<9"
pytest-cov = ">=6.0.0,<7"

[tool.pixi.tasks]
